--- a/package.json
+++ b/package.json
@@ -1,28 +1,32 @@
 {
-	"name": "my-app",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev --turbopack",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint"
-	},
-	"dependencies": {
-		"next": "15.1.3",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
-	},
-	"devDependencies": {
-		"@eslint/eslintrc": "^3",
-		"@types/node": "^20",
-		"@types/react": "^19",
-		"@types/react-dom": "^19",
-		"classnames": "^2.5.1",
-		"eslint": "^9",
-		"eslint-config-next": "15.1.3",
-		"sass": "^1.83.1",
-		"sass-loader": "^16.0.4",
-		"typescript": "^5"
-	}
+  "name": "my-app",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@plaiceholder/next": "^3.0.0",
+    "lqip-modern": "^2.2.1",
+    "next": "15.1.3",
+    "plaiceholder": "^3.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "sharp": "^0.34.3"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "classnames": "^2.5.1",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.3",
+    "sass": "^1.83.1",
+    "sass-loader": "^16.0.4",
+    "typescript": "^5"
+  }
 }
