--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   },
   "dependencies": {
     "@base-ui-components/react": "^1.0.0-beta.3",
-    "@heroicons/react": "^2.2.0",
+    "@emailjs/browser": "^4.4.1",
+    "@emotion/cache": "^11.14.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.2",
+    "@mui/material": "^7.3.2",
     "@plaiceholder/next": "^3.0.0",
     "lqip-modern": "^2.2.1",
     "next": "15.1.3",
