--- a/package.json
+++ b/package.json
@@ -16,10 +16,9 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
-    "@plaiceholder/next": "^3.0.0",
     "lqip-modern": "^2.2.1",
     "next": "15.1.3",
-    "plaiceholder": "^3.0.0",
+    "next-intl": "^4.3.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
