--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "lqip-modern": "^2.2.1",
-    "next": "15.1.3",
+    "next": "^16.0.10",
     "next-intl": "^4.3.9",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.66.1",
     "sharp": "^0.34.3",
@@ -34,7 +34,7 @@
     "@types/react-dom": "^19",
     "classnames": "^2.5.1",
     "eslint": "^9",
-    "eslint-config-next": "15.1.3",
+    "eslint-config-next": "^16.0.10",
     "sass": "^1.83.1",
     "sass-loader": "^16.0.4",
     "typescript": "^5"
